--- a/src/data/levels/003_CPU/014_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/003_CPU/014_Instructions (5-5) - System/chat/en.yml
@@ -71,7 +71,7 @@ implement:
   messages:
   - awesome
   - we'll model interrupts as `{ id, vector }` objects
-  - check out ~/lib/interrupts.js~
+  - check out 📄  ~/lib/interrupts.js~
   - |-
     📚  add this method to your `CPU`:
     **interrupt(interrupt, withBFlag = false)**:
