--- a/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/003_CPU/015_Addressing modes (1-2)/chat/es.yml
@@ -28,7 +28,7 @@ letscode:
   - por lo que solo tienes que implementar "Relative" e "Indirect"
   - ¡puedes tomar el código de 📄  ~/docs/cpu/example_addressing_modes.js~ y continuar desde ahí!
   - 📚  implementa los modos de direccionamiento restantes
-  - y exporta el objeto bajo la clave `addressingModes` en ~/code/index.js~
+  - y exporta el objeto bajo la clave `addressingModes` en 📄  ~/code/index.js~
   responses:
   - ayúdame con el modo "Relative" 😅 [relative]
   - ayúdame con el modo "Indirect" 😅 [indirect]
@@ -37,7 +37,7 @@ relative:
   messages:
   - 💡  recuerda que toma un "desplazamiento" (un byte con signo)
   - los bytes con signo pueden ser complicados de entender para los humanos
-  - usan la notación "Two's component", que está explicada brevemente en ~/lib/byte.js~
+  - usan la notación "Two's component", que está explicada brevemente en 📄  ~/lib/byte.js~
   - por ejemplo, si el desplazamiento es ~-3~, recibirías un 253
   - puedes convertir ese 253 en ~-3~ usando el método `toS8`
   - 💡  además, para detectar si se cruza de página, vas a necesitar `highByteOf`
