--- a/src/data/levels/003_CPU/017_Operations/chat/es.yml
+++ b/src/data/levels/003_CPU/017_Operations/chat/es.yml
@@ -18,8 +18,9 @@ multiple:
   messages:
   - exactamente eso ✔️
   - "aquí hay una función que define todos los opcodes por ti:"
-  - 📄  ~/lib/operations.js~
+  - 📄  ~/lib/defineOperations.js~
   - solo necesitas llamarla, pasando los objetos `instructions` y `addressingModes`
-  - "📚  agrega la siguiente propiedad a tu `CPU`:"
-  - "```javascript this.operations = opcodes(instructions, addressingModes);```"
+  - |-
+    📚  agrega la siguiente propiedad a tu `CPU`:
+      ```javascript this.operations = defineOperations(instructions, addressingModes);```
   responses: []
