--- a/src/data/levels/003_CPU/002_Flags/chat/es.yml
+++ b/src/data/levels/003_CPU/002_Flags/chat/es.yml
@@ -37,7 +37,7 @@ what:
 
 bits:
   messages:
-  - ~/lib/byte.js~ al rescate 🙌
+  - 📄  ~/lib/byte.js~ al rescate 🙌
   - para construir el valor en ```javascript getValue()```, usa `bitfield`
   - para obtener las banderas en ```javascript setValue(value)```, usa `getFlag`
   responses:
