--- a/src/data/levels/003_CPU/020_Initial state/chat/es.yml
+++ b/src/data/levels/003_CPU/020_Initial state/chat/es.yml
@@ -5,7 +5,7 @@ main:
   - inicializaremos nuestra CPU con los valores iniciales correctos
   - 📚  cambia `FlagsRegister` para que la bandera ~I~ comience como `true`
   - |-
-      y al final de nuestro constructor de `CPU`, dispara una interrupción <RESET>:
-        ```javascript this.interrupt(interrupts.RESET);```
-  - ¡asegúrate de haber importado correctamente ~/lib/interrupts.js~!
+    y al final de nuestro constructor de `CPU`, dispara una interrupción <RESET>:
+      ```javascript this.interrupt(interrupts.RESET);```
+  - ¡asegúrate de haber importado correctamente 📄  ~/lib/interrupts.js~!
   responses: []
