Adding disconnected message

--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
@@ -8,7 +8,7 @@ main:
   - when you're ready, close the chat and run the `test` command
   responses:
   - no, I need help 😔 [help]
-  - (*) can you tell me again how to run the other command? [othercommands]
+  - can you tell me again how to run the other command? [othercommands]
 
 othercommands:
   messages:
