--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - cuando esté listo, cierra el chat y ejecuta el comando `test`
   responses:
   - no, necesito ayuda 😔 [help]
-  - (*) ¿me puedes recordar cómo correr el otro comando? [othercommands]
+  - ¿me puedes recordar cómo correr el otro comando? [othercommands]
 
 othercommands:
   messages:
