--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -106,7 +106,8 @@ testing:
   - with 50% of chances each
   - so when it's 7, your code should write $EE
   - and when it's not, $AA should be written
-  responses: []
+  responses:
+  - I need help 😅 [help]
 
 help:
   messages:
