Standarizing file and folder notation

--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
@@ -4,7 +4,7 @@ main:
     if (m.$end) $.goTo("exercise");
   messages:
   - hey
-  - look at your ~/docs~ directory! 📁
+  - look at your 📁  ~/docs~ directory!
   responses:
   - what's there? [exercise]
 
