--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/es.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/es.yml
@@ -4,7 +4,7 @@ main:
     if (m.$end) $.goTo("exercise");
   messages:
   - ey
-  - ¡mira tu directorio ~/docs~! 📁
+  - ¡mira tu directorio 📁  ~/docs~!
   responses:
   - ¿qué hay ahí? [exercise]
 
