--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/es.yml
@@ -11,7 +11,7 @@ cut:
   messages:
   - todos los arrays tienen un método `slice(start, end)` 🍕
   - recorta el array de `start` a `end`-1
-  - "por ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
+  - "p. ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
   - (no incluye el elemento del índice 3, "d")
   responses:
   - no funciona [morehelp]
