--- a/src/data/levels/003_CPU/004_Memory/chat/es.yml
+++ b/src/data/levels/003_CPU/004_Memory/chat/es.yml
@@ -39,7 +39,7 @@ implement:
     **read(address)**:
       __-> si <address> está dentro de $0000-$07FF, retorna el byte correspondiente de <ram>
       -> si <address> está dentro de $0800-$1FFF, retorna un byte espejado de <ram>
-        (por ej. $0802 se vuelve $0002, $1023 se vuelve $0023)
+        (p. ej. $0802 se vuelve $0002, $1023 se vuelve $0023)
       -> caso contrario, retorna 0__
     **write(address, value)**:
       __-> similar a *read*, pero escribe el <value> en lugar de retornar__
