--- a/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
+++ b/src/data/levels/002_Cartridge/001_The magic constant/chat/en.yml
@@ -23,7 +23,8 @@ exercise:
   run: |
     set((m) => m.$end = true);
   messages:
-  - 📚  add a constructor to the `Cartridge` class receiving the ROM bytes, and save them in a property called `bytes`
+  - 📚  add a constructor to the `Cartridge` class receiving the ROM bytes
+  - save them in a property called `bytes`
   - if the magic constant doesn't match $4E $45 $53 $1A, throw an error with the "Invalid ROM." message
   responses:
   - how can I add a constructor? 😳 [constructor]
