--- a/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/007_Addressing modes (3-3)/chat/en.yml
@@ -47,7 +47,7 @@ step4:
   run-after-messages: |
     set((m) => m.$canRun = true);
   messages:
-  - we've set up memory for indirect addressing
+  - we've set up the memory for indirect addressing
   - in the address $0003, we have an $80
   - in the address $0004, we have a $40
   - now I'll switch the Memory Viewer to the usual section
@@ -84,7 +84,7 @@ step7:
 whatwasthat:
   messages:
   - remember the "Indirect" mode?
-  - it builds a address by reading another address and its consecutive byte
+  - it builds an address by reading another address and the consecutive byte
   - in this case, it read an $80 from $0003 and a $40 from $0004
   - it used the former as <least significant byte>
   - and the latter as <most significant byte>
@@ -123,7 +123,7 @@ step9:
 skip:
   messages:
   - sure, you won't see this too much anyway
-  - you'll code an emulator
+  - you'll be coding an emulator
   - so you need to build an <interpreter> for these things
   - not the things themselves 😉
   responses:
