--- a/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
+++ b/src/data/levels/002_Cartridge/002_Reading the header/chat/en.yml
@@ -28,7 +28,7 @@ exercise:
 mapper:
   messages:
   - it's kind of an "expansion chip" that every game has
-  - they help the console read bigger programs and graphic chunks
+  - they help the console read bigger programs and graphics chunks
   - and they allow games to perform more complex operations like changing mirroring on the fly
   - more on that later! 🔜
   responses:
@@ -86,7 +86,7 @@ understand:
 bits:
   messages:
   - if you don't know how to operate with bits, you can use my library 📖
-  - its in 📄  ~/lib/byte.js~, just import it as another module and use it
+  - it's in 📄  ~/lib/byte.js~, just import it as another module and use it
   - the methods you'd want to use are `getFlag`, `highNybbleOf`, `lowNybbleOf`, and `buildU8`
   responses:
   - how can I import the module? [import]
