--- a/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
+++ b/src/data/levels/002_Cartridge/003_Locating the program/chat/en.yml
@@ -10,7 +10,7 @@ main:
 cut:
   messages:
   - all arrays have a `slice(start, end)` method 🍕
-  - it trims the array from `start` to `end`-1
+  - it cuts the array from `start` to `end`-1
   - "i.e. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` returns ```javascript [\"b\", \"c\"]```"
   - (it doesn't include the element at index 3, "d")
   responses:
