--- a/src/data/levels/003_CPU/001_Registers/chat/en.yml
+++ b/src/data/levels/003_CPU/001_Registers/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   messages:
-  - "📚  you'll start by creating two clases: `Register8Bit` and `Register16Bit` 🔢"
+  - "📚  you'll start by creating two classes: `Register8Bit` and `Register16Bit` 🔢"
   - |-
     they should have two methods:
     **getValue()**:
